<resources>
    <string name="app_name">"喜马拉雅FM"</string>
    <string name="tabs_crosstalk_sketch">"相声评书"</string>
    <string name="tabs_exquisite_article">"精品文章"</string>
    <string name="tabs_literati_writings">"文人著作"</string>
    <string name="foot_load_more">"加载更多"</string>
    <string name="foot_has_no_more">"没有更多"</string>
    <string name="no_content">"没有内容"</string>
    <string name="loading_now">"正在为您努力加载..."</string>
    <string name="navigation_title">"导航栏"</string>
    <string name="settings_title">"设置"</string>
    <string name="no_net">"没有网络"</string>
    <string name="confirm">"确定"</string>
    <string name="cancel">"取消"</string>
    <string name="clear_record">"清除记录"</string>
    <string name="confirm_clear_record">"是否确定清除？"</string>
    <string name="playing_state">"正在播放"</string>

    <string name="play_counts">"播放次数："</string>
    <string name="play_duration">"时长："</string>

    <string name="tracks">"集"</string>
    <string name="ten_thousand">"万"</string>
    <string name="album_author">"主播: "</string>
    <string name="album_play_counts">"播放: "</string>
    <string name="ten_thousand_times">"万次"</string>
    <string name="album_type">"分类: "</string>

    <string name="days_ago">"天前"</string>
    <string name="hours_ago">"小时前"</string>
    <string name="minutes_ago">"分钟前"</string>
    <string name="seconds_ago">"秒前"</string>
    
    <string name="album_details">"详情"</string>
    <string name="album_show">"节目"</string>

    <string name="album_content_des">"内容简介"</string>
    <string name="album_actionbar_title">"专辑详情"</string>

    <string name="has_no_next">"已到专辑最后。"</string>
    <string name="has_no_prev">"已是专辑第一首。"</string>
    <string name="tip_click_back_again_to_exist">再按一次退出</string>

    <string name="player_current_time">"00:00"</string>
    <string name="player_total_time">"--:--"</string>

    <string name="ranking_list">"今日最火"</string>

    <string name="close">"关闭"</string>
    <string name="list">"列表"</string>
    <string name="load_success">"成功"</string>
    <string name="track_play_thousands_counts">"万次播放"</string>
    <string name="track_play_counts">"次播放"</string>


    <string name="settings_recent_listener">"最近收听"</string>
    <string name="settings_my_collect">"我的收藏"</string>
    <string name="settings_cache_size_title">"缓存大小："</string>
    <string name="settings_clear_cache_title">"清理缓存"</string>
    <string name="settings_check_update">"检查更新"</string>
    <string name="settings_version_name">"当前版本号："</string>
    <string name="settings_open_cache">"开启缓存"</string>


    <string name="net_error">"网络错误，请检查网络是否稳定"</string>
    <string name="parse_error">"解析错误"</string>
    <string name="connection_error">"连接失败，请检查网络"</string>
    <string name="http_error">"协议出错"</string>
    <string name="ssl_error">"证书验证失败"</string>
    <string name="socket_timeout_error">"响应超时，请重新访问或者检查网络"</string>
    <string name="connect_error">"请求超时，请重新访问或者检查网络"</string>
    <string name="unknown_error">"未知错误"</string>
    <string name="wrong_xml">"XML错误"</string>
    <string name="net_error_msg_head">"喵～网络偷懒啦～"</string>
    <string name="net_error_msg">"网络偷懒啦~"</string>
    <string name="net_error_msg_body">"再试一次，伦家已经在飞来的路上了"</string>
    <string name="reload">"重新加载"</string>
    <string name="foot_reload">"点击重新加载"</string>
</resources>
