<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="3dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp">

            <com.fastapp.viroyal.fm_newstyle.view.SquareImageView
                android:id="@+id/album_image"
                android:layout_width="105dip"
                android:layout_height="105dip"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:scaleType="centerCrop" />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:orientation="vertical">

            <TextView
                android:id="@+id/album_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_large_primary_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/album_author"
                    android:textColor="@color/text_light"
                    android:textSize="@dimen/text_large_secondary_size" />

                <TextView
                    android:id="@+id/album_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_large_secondary_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/album_play_counts"
                    android:textColor="@color/text_light"
                    android:textSize="@dimen/text_large_secondary_size" />

                <TextView
                    android:id="@+id/album_play_counts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_light"
                    android:textSize="@dimen/text_large_secondary_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/album_type"
                    android:textColor="@color/text_light"
                    android:textSize="@dimen/text_large_secondary_size" />

                <TextView
                    android:id="@+id/album_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_large_secondary_size" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>